# wakuwaku

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
hanachan-fastapi/: pyproject.toml
hanachan-fastapi/src/app/: main.py
hanachan-fastapi/src/app/api/v1/: auth.py  hanachan.py  router.py  users.py
hanachan-fastapi/src/app/schemas/: hanachan_wanikani.py  user.py
hanachan-fastapi/src/app/services/: hanachan_service.py
kanjischool/: Dockerfile  README.md  package.json
nginx/: nginx.conf  supabase-gateway.conf
resources/: hanachan-wanikani-api-merged.yaml  schema.sql
resources/data/: crawl_summary.json  level_01.json  level_02.json  level_03.json  level_04.json  level_05.json  level_06.json  level_07.json  level_08.json  level_09.json  level_10.json  level_11.json  level_12.json  level_13.json  level_14.json  level_15.json  level_16.json  level_17.json  level_18.json  level_19.json  level_20.json  level_21.json  level_22.json  level_23.json  level_24.json  level_25.json  level_26.json  level_27.json  level_28.json  level_29.json  level_30.json  level_31.json  level_32.json  level_33.json  level_34.json  level_35.json  level_36.json  level_37.json  level_38.json  level_39.json  (+21 more)
scripts/: compare_api.py  crawl_wanikani.py  frontend_server.py  manual_pentest.py  patch_kanjischool.sh  pentest.py  seed_supabase.py  start_backend.sh  start_frontend.sh  verify_wanikani_quality.py
src/app/: db.py  deps.py  main.py
supabase/: config.toml
wakuwaku/: index.html  package.json
wakuwaku-api/: pyproject.toml
wakuwaku/src/: App.tsx  (+3 more)
(+475 files in other folders)
