[project]
name = "hanachan-wanikani-api"
version = "0.1.0"
description = "Hanachan WaniKani API clone built with FastAPI and PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "supabase>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "schemathesis>=3.33.0",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
